--- a/config.toml
+++ b/config.toml
@@ -28,7 +28,7 @@ pagination.pagerSize = 5
     readOtherPosts = "Read other posts"
 
     [languages.en.params.logo]
-      logoText = "Terminal"
+      logoText = "Roudy"
       logoHomeLink = "/"
 
 
