--- a/config.toml
+++ b/config.toml
@@ -14,8 +14,8 @@ pagination.pagerSize = 5
 [params]
   contentTypeName = "posts"
   showMenuItems = 2
-  fullWidthTheme = false
-  centerTheme = false
+  fullWidthTheme = true
+  centerTheme = true
 
 [languages]
   [languages.en]
